--- a/src/pluralsightfuncs/pluralsightfuncs.csproj
+++ b/src/pluralsightfuncs/pluralsightfuncs.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.24" />
+    <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.Storage" Version="3.0.3" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
