--- a/src/pluralsightfuncs/.vscode/extensions.json
+++ b/src/pluralsightfuncs/.vscode/extensions.json
@@ -1,5 +1,7 @@
 {
-    "recommendations": [
-        "ms-azuretools.vscode-azurefunctions"
-    ]
+  "recommendations": [
+    "ms-azuretools.vscode-azurefunctions",
+    "ms-vscode.csharp"
+  ]
 }
+  
