--- a/src/StoicMeditations.AzureFunctions/StoicMeditations.AzureFunctions/StoicMeditations.AzureFunctions.csproj
+++ b/src/StoicMeditations.AzureFunctions/StoicMeditations.AzureFunctions/StoicMeditations.AzureFunctions.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <AzureFunctionsVersion>v2</AzureFunctionsVersion>
@@ -15,5 +15,8 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <CopyToPublishDirectory>Never</CopyToPublishDirectory>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Fn\" />
   </ItemGroup>
 </Project>
